src/app/styles/includes/styles.scss
/* ... */
md-checkbox-container,
md-radiobutton-container {

	margin-bottom: 29px;
	margin-top: 0px;

	label {
	    transform-origin: left;
	    -webkit-transform: scale(0.75);
	    transform: scale(0.75);
	    color: rgba(0,0,0,0.54);
	    margin-bottom: 1.5px;
	    display: block;
	}
}


fs-heading {
    color: #272727;
    font-size: 20px;
    height: 36px;
    display: block;
    vertical-align: middle;
    position: relative;
    line-height: 36px;
    margin-bottom: 10px;
}

fs-heading fs-heading-actions {
    position: absolute;
    right: 0;
}

fs-heading fs-heading-actions .md-button {
    margin: 0;
}

md-dialog {
	max-width: 1100px;
}

md-select:not([disabled]):focus .md-select-value {
	padding-bottom: 2px;
}

hr {
    border: 1px solid #D0D0D0;
    border-bottom: 0;
}

md-input-container {
    box-sizing: content-box;
    margin: 18px 0;
    padding: 2px;
    min-height: 54px;
    vertical-align: middle;

    &[flex],
    &[class~="flex"]
    &[class|="flex"] {
        // because flex changes its display from block to flex and its box-sizing from content-box to border-box
        min-height: 58px;
    }

    &.md-block {
        display: block;
        margin-bottom: 0;
        padding-bottom: 20px;
    }

    // icon offset should have higher priority as normal label
    &.md-has-icon {
        padding-left: 2px;

        > label {
            left: 0px;
        }
    }

    &.md-icon-float {

    }

    &.md-icon-left {
        padding-left: 28px;
        padding-right: 2px;

        > label {
            left: 27px;
        }
    }

    &.md-icon-right {
        padding-left: 2px;
    }

    > md-icon {
        color: rgba(0,0,0,0.57);
    }

    textarea.md-input {
        font-size: 16px;
        line-height: 20px;
        padding-top: 4px;
        height: 30px;
        min-height: 30px;
    }

    /*
     * The .md-input class is added to the input/textarea
     */
    .md-input {
        margin-top: 1px;
        line-height: 26px;
        height: 30px;
        -ms-flex-preferred-size: 26px;
        padding-top: 0px;

        &:focus {
        }

        &:invalid {
        }

        &.md-no-flex {
        }
    }

    .md-input[disabled],
    [disabled] & .md-input {
       margin-top: 1px;
    }

    label, .md-placeholder {
        color: rgba(0, 0, 0, 0.26);
    }

    label {
        line-height: 21px;

        md-icon,
        md-icon.material-icons {
            vertical-align: text-bottom;
            font-size: 20px;
            height: 20px;
            width: 20px;
        }

        padding-left: 2px;

        &:not(.md-no-float) {
        }

        &:not(.md-container-ignore) {
        }

        &:not(.md-no-float):not(.md-container-ignore) {
            padding-left: 2px;
        }
    }

    .md-placeholder {
    }


    &.md-input-focused,
    &.md-input-has-value,
    &.md-input-has-placeholder{
        label, label:not(.md-no-float):not(.md-container-ignore) {
            padding-left: 6px;
            margin-top: 0;
        }
    }


    &:not(.md-input-invalid) {

        &.md-input-has-value {
            label,
            md-icon {
                color: rgba(0, 0, 0, 0.54);
            }
        }

        &.md-input-focused {
            label,
            md-icon,
            &.md-accent label,
            &.md-warn label {

            }
        }
    }


    &.md-input-invalid {
        label,
        &.md-input-focused label {

        }
    }

    .md-char-counter {
        font-size: 12px;
        line-height: 12px;
        padding-top: 7px;
    }

    ng-messages .md-char-counter,
    [ng-messages] .md-char-counter,
    ng-message .md-char-counter,
    data-ng-message .md-char-counter,
    x-ng-message .md-char-counter,
    [ng-message] .md-char-counter,
    [data-ng-message] .md-char-counter,
    [x-ng-message] .md-char-counter,
    [ng-message-exp] .md-char-counter,
    [data-ng-message-exp] .md-char-counter,
    [x-ng-message-exp] .md-char-counter {
        font-size: 12px;
        line-height: 12px;
        padding-top: 7px;
    }


    input, md-select, textarea {
        color: rgba(0, 0, 0, 0.87);
    }

    &.md-block {
        md-select {
        }
    }

    md-select {

        .md-select-value {
            padding-top: 2px;
            padding-bottom: 2px;

            > * {
                margin-bottom: 3px;
            }

            &.md-select-placeholder {

            }

            .md-select-icon {
                width: 15px;
                margin-top: 2px;
                margin-right: 0;
                margin-bottom: 3px;

                &:after {

                }
            }
        }
    }
}

md-input-container,
md-datepicker-container {

    .hint {
        color: rgba(0, 0, 0, 0.87);
        font-size: 12px;
        line-height: 12px;

        padding-left: 2px;
        padding-top: 0;

        position: absolute;
        bottom: 7px;
        overflow: hidden;
    }

    ng-messages,
    [ng-messages] {
        color: rgb(221, 44, 0);
        font-size: 12px;
        line-height: 12px;

        padding-left: 2px;
        padding-top: 0;

        position: absolute;
        bottom: 7px;
        left: 0;
    }

    .hint ~ ng-messages,
    .hint ~ [ng-messages] {
        bottom: -10px;
    }

    &.md-block {
        .hint {
            bottom: 25px;
        }

        ng-messages,
        [ng-messages] {
            bottom: 25px;
        }

        .hint ~ ng-messages,
        .hint ~ [ng-messages] {
            bottom: 8px;
        }
    }

    ng-message,
    data-ng-message,
    x-ng-message,
    [ng-message],
    [data-ng-message],
    [x-ng-message],
    [ng-message-exp],
    [data-ng-message-exp],
    [x-ng-message-exp] {
        display: block;
        font-size: 12px;
        line-height: 12px;
        padding-top: 0;
        padding-left: 2px;
    }

    form[fs-validate] & ng-message {
        font-size: 12px;
        line-height: 12px;

        padding-top: 0px;
        padding-left: 2px;
    }
}
/* ... */

